删除多余文件,修改composer包url

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -31,7 +31,7 @@
                     <a href="https://www.layui.com/doc/">接口文档</a>
                 </li>
                 <li class="layui-nav-item">
-                    <a target="_blank" href="{$readme}">接口开发文档</a>
+                    <a target="_blank" href="{$readme}">think-apidoc文档</a>
                 </li>
                 <!-- <span class="layui-nav-bar" style="left: 452px; top: 55px; width: 0px; opacity: 0;"></span> -->
             </ul>
