--- a/src/view/action.html
+++ b/src/view/action.html
@@ -409,27 +409,36 @@
                         if (token != null) {
                             response.params['token'] = token;
                         }
-                        var formData = new FormData();
-                        var params = response.params;
-                        for (const key in params) {
-                            formData.append(key, params[key])
-                        }
+                        var processData = true;
+                        var contentType =
+                            'application/x-www-form-urlencoded; charset=UTF-8';
+                        var ajaxData = response.params;
                         var files = document.querySelectorAll(".upload_file");
-                        for (var i = 0; i < files.length; i++) {
-                            var name = files[i].parentNode.previousElementSibling
-                                .firstChild.value;
-                            var fileObj = files[i].files[0]
-                            formData.append(name, fileObj);
+                        if (files.length > 0) {
+                            var formData = new FormData();
+                            var params = response.params;
+                            for (const key in params) {
+                                formData.append(key, params[key])
+                            }
+                            for (var i = 0; i < files.length; i++) {
+                                var name = files[i].parentNode
+                                    .previousElementSibling
+                                    .firstChild.value;
+                                var fileObj = files[i].files[0];
+                                formData.append(name, fileObj);
+                            }
+                            ajaxData = formData;
+                            processData = false;
+                            contentType = false;
                         }
-
                         $.ajax({
                             url: data.field.url,
                             dataType: "json",
                             type: data.field.method,
                             headers: response.header,
-                            data: formData,
-                            processData: false,
-                            contentType: false,
+                            data: ajaxData,
+                            processData: processData,
+                            contentType: contentType,
                             complete: function (XHR) {
                                 layer.close(index);
                                 var html = "";
