--- a/src/view/index.html
+++ b/src/view/index.html
@@ -124,7 +124,7 @@
     </div>
     <script src="{$resource}/lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
     <script src="{$resource}/js/lay-config.js?v=2.0.0" charset="utf-8"></script>
-
+    <script src="{$resource}/lib/clipboard/clipboard.js" charset="utf-8"></script>
     <script>
         layui.use(['jquery', 'layer', 'miniAdmin', 'miniTongji'], function () {
             var $ = layui.jquery,
