--- a/src/view/index.html
+++ b/src/view/index.html
@@ -59,13 +59,13 @@
                     <li class="layui-nav-item" lay-unselect>
                         <a href="javascript:;" data-refresh="刷新"><i class="fa fa-refresh"></i></a>
                     </li>
-                    <li class="layui-nav-item" lay-unselect>
+                    <!-- <li class="layui-nav-item" lay-unselect>
                         <a href="javascript:;" data-clear="清理" class="layuimini-clear"><i class="fa fa-trash-o"></i></a>
-                    </li>
+                    </li> -->
                     <li class="layui-nav-item mobile layui-hide-xs" lay-unselect>
                         <a href="javascript:;" data-check-screen="full"><i class="fa fa-arrows-alt"></i></a>
                     </li>
-                    <li class="layui-nav-item layuimini-setting">
+                    <!-- <li class="layui-nav-item layuimini-setting">
                         <a href="javascript:;">admin</a>
                         <dl class="layui-nav-child">
                             <dd>
@@ -83,7 +83,7 @@
                                 <a href="javascript:;" class="login-out">退出登录</a>
                             </dd>
                         </dl>
-                    </li>
+                    </li> -->
                     <li class="layui-nav-item layuimini-select-bgcolor" lay-unselect>
                         <a href="javascript:;" data-bgcolor="配色方案"><i class="fa fa-ellipsis-v"></i></a>
                     </li>
